@@ -1,3 +1,8 @@
+2005-08-15 Yen-Ju Chen <yjchenx at gmail _dot_ com>
+
+	* SQLite2.m:
+	SQLiteClient for sqlite 2. It is not built by default.
+
 2005-08-04 Yen-Ju Chen <yjchenx at gmail _dot_ com>
 	
 	* Initial Import.
